--- a/appinfo.json
+++ b/appinfo.json
@@ -10,7 +10,6 @@
         "media": [
             {
                 "file": "images/menu_icon.png",
-                "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
                 "type": "bitmap"
             },
@@ -28,6 +27,12 @@
                 "file": "fonts/UbuntuMono-Regular.ttf",
                 "name": "MONO_FONT_14",
                 "type": "font"
+            },
+            {
+                "file": "images/golfshot",
+                "menuIcon": true,
+                "name": "IMAGES_GOLFSHOT",
+                "type": "bitmap"
             }
         ]
     },
@@ -36,7 +41,8 @@
     "targetPlatforms": [
         "aplite",
         "basalt",
-        "chalk"
+        "diorite",
+        "emery"
     ],
     "uuid": "1d913be1-93c4-47ef-9930-641a3d01a670",
     "versionCode": 1,
